It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sun, Mar 1, 2008
---------------------------------------------------------------------
- Added core extension library.
- Implemented Opportunity summary sidebar on the Opportunity landing page.

Sat, Feb 28, 2008
---------------------------------------------------------------------
- Added gravatar support for leads and contacts.

Fri, Feb 27, 2008
---------------------------------------------------------------------
- Added [gravatar] plugin and implemented gravatars for notes.

Thu, Feb 26, 2008
---------------------------------------------------------------------
- Github commits are up on Twitter at http://twitter.com/fatfreecrm
- More refactoring to simplify handling of inline forms.
- Implemented adding related tasks for Leads, Accounts, Contacts, and Opportunities.

Wed, Feb 25, 2008
---------------------------------------------------------------------
- Refactored tasks, added ability to create related tasks (Campaigns only so far).

Tue, Feb 24, 2008
---------------------------------------------------------------------
- Implemented adding opportunities from the [Campaign] landing page.
- Implemented adding opportunities from [Contact] landing page.
- Implemented adding contacts from [Opportunity] landing page.
- Three months anniversary ;-).

Mon, Feb 23, 2008
---------------------------------------------------------------------
- Implemented adding leads from the [Campaign] landing page.
- Implemented adding contacts from the [Account] landing page.
- Implemented adding opportunities from the [Account] landing page.
- Updated README file.

Sun, Feb 22, 2008
---------------------------------------------------------------------
- Adding parent object support for inline forms.

Fri, Feb 20, 2008
---------------------------------------------------------------------