@@ -300,11 +300,16 @@
   :-webkit-border-radius 4px
 
 .panel
+  div
+    :margin 0px 0px 10px 0px
+  h4
+    :font-size 13px
+    :font-weight bold
   li
     :border-bottom 1px silver dotted
     :font-size 12px
     :list-style none
-    :padding 3px 0px 3px 0px
+    :padding 2px 0px 3px 0px
     tt
       :font-size 11px
     dt
@@ -314,16 +319,15 @@
         :weight bold
     &.last
       :border-bottom none
-
-.caption
-  :background #dfdfdf
-  :border-bottom 1px silver solid
-  :color #344152
-  :font
-    :size 11px
-    :weight bold
-  :margin 0px 0px 5px 0px
-  :padding 2px 0px 2px 4px
+  .caption
+    :background #dfdfdf
+    :border-bottom 1px silver solid
+    :color #344152
+    :font
+      :size 11px
+      :weight bold
+    :margin 4px 0px 2px 0px
+    :padding 2px 0px 2px 4px
 
 .selector
   :color black
