@@ -354,11 +354,16 @@ tt {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px; }
 
+.panel div {
+  margin: 0px 0px 10px 0px; }
+.panel h4 {
+  font-size: 13px;
+  font-weight: bold; }
 .panel li {
   border-bottom: 1px silver dotted;
   font-size: 12px;
   list-style: none;
-  padding: 3px 0px 3px 0px; }
+  padding: 2px 0px 3px 0px; }
   .panel li tt {
     font-size: 11px; }
   .panel li dt {
@@ -367,14 +372,13 @@ tt {
     font-weight: bold; }
   .panel li.last {
     border-bottom: none; }
-
-.caption {
+.panel .caption {
   background: #dfdfdf;
   border-bottom: 1px silver solid;
   color: #344152;
   font-size: 11px;
   font-weight: bold;
-  margin: 0px 0px 5px 0px;
+  margin: 4px 0px 2px 0px;
   padding: 2px 0px 2px 4px; }
 
 .selector {
