@@ -4,10 +4,14 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Mon, Mar 2, 2008
+---------------------------------------------------------------------
+- Implemented Lead summary sidebar for individual Lead.
+
 Sun, Mar 1, 2008
 ---------------------------------------------------------------------
 - Added core extension library.
-- Implemented Opportunity summary sidebar on the Opportunity landing page.
+- Implemented Opportunity summary sidebar for individual Opportunity.
 
 Sat, Feb 28, 2008
 ---------------------------------------------------------------------
